[package]
name = "rust_os"
version = "0.1.0"
authors = ["AjithPanneerselvam <ajith.panneerselvam@qubecinema.com>"]

[dependencies]
bootloader_precompiled = "0.2.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic 

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic 

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"
